--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-view-transitions": "^0.3.4",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
